Command deployment and handling set up

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "bot"
   ],
   "author": "wwongandy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "discord.js": "^14.6.0"
+  }
 }
