--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "wwongandy",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^14.6.0"
+    "discord.js": "^14.6.0",
+    "firebase": "^9.14.0"
   }
 }
